--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://loppy33.github.io/wheel",
+  "homepage": "/",
   "name": "wheel",
   "version": "0.1.0",
   "private": true,
